--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,9 @@
-spring.datasource.url= jdbc:sqlserver://tire-server.database.windows.net:1433;database=pneu;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=tire.admin
-
-spring.datasource.password=zizou1998AHMED
-spring.jpa.hibernate.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
-
-java.runtime.version=11
 
 server.port=8010
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://tire-database.mysql.database.azure.com:3306/pneu?useSSL=true
+spring.datasource.username=medAziz@tire-database
+spring.datasource.password=zizou1998AHMED
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-debug=true
-logging.level.org.springframework.boot.autoconfigure=ERROR
-server.error.include-message=always
-
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
