--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 
 server.port=8010
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://tire-database.mysql.database.azure.com:3306/pneu?useSSL=true
-spring.datasource.username=medAziz@tire-database
+spring.datasource.url=jdbc:mysql://localhost:3306/pneu?useSSL=true
+spring.datasource.username=root
 spring.datasource.password=zizou1998AHMED
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
